--- a/text-classification-with-neural-networks.ipynb
+++ b/text-classification-with-neural-networks.ipynb
@@ -160,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Jun 26 10:41:03 2023       \r\n",
+      "Tue Jun 27 20:15:39 2023       \r\n",
       "+-----------------------------------------------------------------------------+\r\n",
       "| NVIDIA-SMI 525.116.04   Driver Version: 525.116.04   CUDA Version: 12.0     |\r\n",
       "|-------------------------------+----------------------+----------------------+\r\n",
@@ -169,7 +169,7 @@
       "|                               |                      |               MIG M. |\r\n",
       "|===============================+======================+======================|\r\n",
       "|   0  NVIDIA GeForce ...  Off  | 00000000:09:00.0  On |                  N/A |\r\n",
-      "|  0%   40C    P8    N/A /  85W |    584MiB /  4096MiB |      4%      Default |\r\n",
+      "| 38%   40C    P8    N/A /  85W |    476MiB /  4096MiB |      2%      Default |\r\n",
       "|                               |                      |                  N/A |\r\n",
       "+-------------------------------+----------------------+----------------------+\r\n",
       "                                                                               \r\n",
@@ -178,10 +178,10 @@
       "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\r\n",
       "|        ID   ID                                                   Usage      |\r\n",
       "|=============================================================================|\r\n",
-      "|    0   N/A  N/A      1874      G   /usr/lib/xorg/Xorg                279MiB |\r\n",
-      "|    0   N/A  N/A      2018      G   /usr/bin/gnome-shell               69MiB |\r\n",
-      "|    0   N/A  N/A      8389      G   ...RendererForSitePerProcess      135MiB |\r\n",
-      "|    0   N/A  N/A      9497    C+G   ...010102052289132155,262144       95MiB |\r\n",
+      "|    0   N/A  N/A      1842      G   /usr/lib/xorg/Xorg                251MiB |\r\n",
+      "|    0   N/A  N/A      1990      G   /usr/bin/gnome-shell               39MiB |\r\n",
+      "|    0   N/A  N/A      7139    C+G   ...610069330497077220,262144       93MiB |\r\n",
+      "|    0   N/A  N/A     10188      G   ...RendererForSitePerProcess       87MiB |\r\n",
       "+-----------------------------------------------------------------------------+\r\n"
      ]
     }
@@ -209,7 +209,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
+   "id": "38d865e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extracting zip file downloaded from kaggle (https://www.kaggle.com/datasets/reihanenamdari/mental-health-corpus)\n",
+    "with zipfile.ZipFile(\"Data/archive.zip\", \"r\") as zip_ref:\n",
+    "    zip_ref.extractall(\"Data/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "44b1d57c",
    "metadata": {
     "execution": {
@@ -322,13 +334,13 @@
        "9  live guiltok made stupid random choice  its ge...      1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Pandas DataFramea\n",
+    "# Pandas DataFrame\n",
     "dataframe = pd.read_csv(\"Data/mental_health.csv\")\n",
     "dataframe.head(10)"
    ]
